--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dayjs": "^1.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
